# DNA-web

./: .flake8  .gitignore  .pre-commit-config.yaml  Index.html  README.md  app.py  index_old.html  pyproject.toml  rxconfig.py  server.py
css/: index.css  materialize.css
dna_web/: README.md  __init__.py  dna_web.py  main.py  pyproject.toml
dna_web/components/: __init__.py  base_template.py  controls_section.py  input_section.py  navbar.py  properties_section.py  results_section.py
dna_web/pages/: __init__.py  guide.py  index.py
dna_web/state/: __init__.py  dna_analyzer.py
img/favicon/: manifest.json
scripts/: app.js  generate_seq.js  properties.js  translate.js
