[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dna-web"
version = "0.1.0"
description = "Aplicación web para traducción de secuencias de ADN/ARN y análisis de proteínas"
authors = ["DNA Web Team <team@dna-web.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
server = "server:run"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
